--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@types/node": "^20",
