--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/card": "^2.0.34",
+    "@nextui-org/chip": "^2.0.33",
+    "@nextui-org/image": "^2.0.32",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "axios": "^1.7.2",
+    "framer-motion": "^11.5.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
